--- a/src/index.njk
+++ b/src/index.njk
@@ -3,5 +3,12 @@ layout: layout.njk
 title: Index
 ---
 
-<a href="/step1">start here</a>
-<a href="/confirmation">end here</a>
+<a href="/step0">start here</a>
+
+<ul>
+  {%- for post in collections.all -%}
+  <li>
+    <a href="{{ post.url }}">{{ post.url }}</a>
+  </li>
+  {%- endfor -%}
+</ul>
