--- a/src/step2/ine.njk
+++ b/src/step2/ine.njk
@@ -3,7 +3,7 @@ layout: layout.njk
 title: Step 2
 ---
 
-<h1 class="govuk-heading-xl">Vyberte PO</h1>
+<h1 class="govuk-heading-xl">Navrhovateľ</h1>
 <p class="govuk-body">This is a paragraph inside a two-thirds wide column</p>
 
 <form
@@ -13,7 +13,35 @@ title: Step 2
 >
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-      <h1 class="govuk-fieldset__heading">What is your address?</h1>
+      <h1 class="govuk-fieldset__heading">Meno</h1>
+    </legend>
+
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="given-name"> Meno </label>
+      <input
+        class="govuk-input"
+        id="given-name"
+        name="given-name"
+        type="text"
+        autocomplete="given-name"
+      />
+    </div>
+
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="family-name"> Priezvisko </label>
+      <input
+        class="govuk-input"
+        id="family-name"
+        name="family-name"
+        type="text"
+        autocomplete="family-name"
+      />
+    </div>
+  </fieldset>
+
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      <h1 class="govuk-fieldset__heading">Bydlisko</h1>
     </legend>
 
     <div class="govuk-form-group">
